Adding animations 8th November 2021

--- a/nwsl/website/static/website/src/partial/_00.scss
+++ b/nwsl/website/static/website/src/partial/_00.scss
@@ -106,10 +106,13 @@
 #hero_header_section {
    /*  border: 5px dotted green;  */
 }
-
+.contactdetailsAnimate {
+  
+}
 
 .anim {
   opacity: 0;
+  
 }
 @keyframes anim1 {
   from {
